Fix errors, CSS
Signed-off-by: Daniel Bluhm <bluhmdan@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <script src="lib/browser-polyfill-0.4.0.js"></script>
+    <script src="browser-extension/lib/browser-polyfill-0.4.0.js"></script>
     <link href="browser-extension/lib/bootstrap.min.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
     <link href="lib/jsoneditor.min.css" rel="stylesheet">
@@ -16,22 +16,28 @@
 
     <main role="main" class="container-fluid">
         <div id="connect" hidden=true>
-            <div class="form-group">
-                <label for="endpoint">Full Agent Endpoint:</label>
-                <div class="input-group mb-2">
-                    <div class="input-group-prepend">
-                        <div class="input-group-text">http://</div>
-                    </div>
-                    <input id="endpoint" class="form-control form-control-lg" type="text" placeholder="www.example.com/agent"/>
+            <div class="row justify-content-center">
+                <div class="col-md-4">
+                    <form>
+                        <div class="form-group">
+                            <label for="endpoint">Full Agent Endpoint:</label>
+                            <div class="input-group mb-2">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">ws://</div>
+                                </div>
+                                <input id="endpoint" class="form-control form-control-lg" type="text" placeholder="www.example.com/agent"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="endpoint">Full Agent Verkey:</label>
+                            <div class="input-group mb-2">
+                                <input id="vk" class="form-control form-control-lg" type="text" placeholder="<base58 encoded vk>"/>
+                            </div>
+                        </div>
+                        <button id="connect-btn" class="btn btn-primary btn-lg btn-block" type="button">Connect</button>
+                    </form>
                 </div>
             </div>
-            <div class="form-group">
-                <label for="endpoint">Full Agent Verkey:</label>
-                <div class="input-group mb-2">
-                    <input id="vk" class="form-control form-control-lg" type="text" placeholder="<base58 encoded vk>"/>
-                </div>
-            </div>
-            <button id="connect-btn" class="btn btn-primary" type="button">Connect</button>
         </div>
         <div id="editor" hidden=true>
             <div class="row">
@@ -47,14 +53,17 @@
                         </div>
                     </div>
                 </div>
-                <div id="message-list" class="col-sm-4">
+                <div class="col-sm-4">
                     <h4>Saved Messages</h4>
-                    <ul id="saved-messages" class="list-group">
-                    </ul>
+                    <div id="message-list">
+                        <ul id="saved-messages" class="list-group">
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
+    <script src="browser-extension/lib/jquery-3.4.1.slim.min.js"></script>
     <script src="browser-extension/lib/bootstrap.min.js"></script>
     <script src="lib/jsoneditor.min.js"></script>
     <script src="lib/aries-didcomm.js"></script>
